--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
  <h1>Hi! I am Allain</h1>
+ <h2>HTML Tasks</h2>
+ <nav>
+    <ol>
+        <li><a href = "BoncilaoExplorePHTours.html">Explore PH Tours</a></li>
+    </ol>
+ </nav>
 </body>
 </html>
