Course Schedule (main branch)

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 <body>
  <h1>Hi! I am Allain</h1>
  <h2>HTML Tasks</h2>
+ 
  <nav>
     <ol>
         <li><a href = "BoncilaoExplorePHTours.html">Explore PH Tours</a></li>
+        <li><a href = "BoncilaoCourseSchedule.html">2nd Term Course Schedule</a></li>
+
     </ol>
  </nav>
 </body>
