--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
     <ol>
         <li><a href = "BoncilaoExplorePHTours.html">Explore PH Tours</a></li>
         <li><a href = "BoncilaoCourseSchedule.html">2nd Term Course Schedule</a></li>
+        <li><a href="https://github.com/Allian21/Allian21.github.io/tree/main/BoncilaoWeek8">Week 8</a></li>
+
 
     </ol>
  </nav>
+ <h2>Summative Assessments</h2>
+ <ol>
+     <li><a href="https://allian21.github.io/Digital-Portfolio---BONCILAO/">Portfolio</a></li>
+     <li><a href="https://github.com/fledelmu/Acunatics-IM-Web-Prog">Porky Best Production Process System</a></li>
+ </ol>
 </body>
 </html>
